views/assets/src/helpers/less/customization/pm-overview.less
/* ... */
div#pm-calender-page .project-select-area .form-content-wrap .drop-down-wrap .projects-drop-down .multiselect__tags {
    height: 42px;
    border-radius: var(--pm-input-radius);
    padding: 9px;
}
div#pm-calender-page .project-select-area .form-content-wrap .drop-down-wrap .users-drop-down .multiselect__tags{
	height: 42px;
	border-radius: var(--pm-input-radius);
    padding: 9px;
	overflow: hidden;
}

div#pm-calender-page .project-select-area .form-content-wrap .drop-down-wrap {
    align-items: center;
}

div#pm-calender-page .pm-common-header .button-secondary {
    height: 42px;
}

div#pm-calender-page .project-select-area .form-content-wrap {
    align-items: center;
}
.pm-wrap.pm-front-end.pm-report-wrapper {
    margin-top: 0;
}

.pm-wrap.pm-front-end.pm-report-wrapper .pm-common-header {
    border-radius: 0!important;
}

#wedevs-project-manager .pm-wrap.pm-front-end.pm-report-wrapper .pm-common-header {
    padding-bottom: 20px!important;
    border-radius: 0 0 var(--pm-block-radius) var(--pm-block-radius) !important;
}
.pm-files.pm-files-container-pro .pm-pro-file-container .folders-list-container{
	border-radius: 10px;
	padding: 30px;
}
.pm-doc-modal .modal-body{
	margin:0;
	padding: 20px 0!important;
}
.project-edit-form .new-pm-header h2 {
    margin-top: 0;
}

.pm-header-title-content .project-edit-form .submit {
    padding-bottom: 0;
    margin-bottom: 0;
}
.pm-discussion.pm-discussion-container .pm-blank-template.discussion {
    padding: 0;
    border: none;
    background: no-repeat;
    box-shadow: none;
}
.pm-discussion.pm-discussion-container, .pm-discussion.pm-discussion-container .pm-new-message-form {
    border-radius: 10px;
}

.pm-discussion.pm-discussion-container .pm-blank-template.discussion .submit {
    padding-bottom: 0;
    margin-bottom: 0;
}
#wedevs-project-manager .discuss-notifier .notify-users .pm-multiselect-top {
    right: auto;
    left: 0;
    top: 35px;
    border: none;
}

#wedevs-project-manager .discuss-notifier .notify-users .pm-multiselect-top::before {
    left: 10px;
    right: auto;
    border-color: transparent;
}

#wedevs-project-manager .discuss-notifier .notify-users .pm-multiselect-top::after {
    left: 10px;
    right: auto;
}
.vue-daterange-picker .dropdown-menu .yearselect {
    height: 38px;
}

#wedevs-project-manager select.monthselect.col {
    height: 38px!important;
}

#wedevs-project-manager.pm-page-wrapper .pm-my-tasks .mytask-activity .pm-activity-list .pm-activity-body li div {
    margin-left: 15px;
}

#wedevs-project-manager.pm-page-wrapper .pm-my-tasks .mytask-activity .pm-activity-list .pm-activity-body li div span:first-of-type {
    margin-left: -10px !important;
}

#wedevs-project-manager #pm-progress-wrap .pm-activity a.pm-progress-label {
	margin-left: -15px;
}

.pm-todo-item .todo-content .task-action-wrap .task-comment-total span {
	min-width: 0px !important;
}

.pm-messege-wrapper .dicussion-meta .comment-count i::before {
	margin-left: 0px;
}

.pm-milestone-container .bb-icon-flag:before {
	margin-left: 0px !important;
}

.pm-page-wrapper .pm-filter-selection select {
	background:  var(--pm-secondary-button-background-regular) !important;
  }

// #wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
// 	margin-left: 44px !important;
// }

